--- a/app/src/main/res/layout/fragment_tambah_barang.xml
+++ b/app/src/main/res/layout/fragment_tambah_barang.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
 
     </data>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="20dp"
         tools:context=".Fragment.TambahBarangFragment">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -76,7 +77,7 @@
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
                                 android:backgroundTint="@color/grey1"
-                                android:src=""
+
                                 app:cardCornerRadius="50dp"
                                 tools:ignore="MissingConstraints"
                                 app:layout_constraintStart_toStartOf="parent"
